--- a/src/code/AndresInfo.form
+++ b/src/code/AndresInfo.form
@@ -32,7 +32,7 @@
     <Container class="javax.swing.JPanel" name="jPanel1">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="f7" green="f8" red="ef" type="rgb"/>
+          <Color blue="fc" green="fc" red="fc" type="rgb"/>
         </Property>
         <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="ff" green="ff" red="ff" type="rgb"/>
@@ -52,12 +52,12 @@
         <Component class="javax.swing.JLabel" name="jLabel1">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/images/ricktiny.jpg"/>
+              <Image iconType="3" name="/images/IMG_1062.jpg"/>
             </Property>
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="400" y="70" width="150" height="150"/>
+              <AbsoluteConstraints x="550" y="60" width="133" height="200"/>
             </Constraint>
           </Constraints>
         </Component>
@@ -101,7 +101,7 @@
         <Container class="javax.swing.JPanel" name="gitAndPanel">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="f7" green="f8" red="ef" type="rgb"/>
+              <Color blue="fc" green="fc" red="fc" type="rgb"/>
             </Property>
           </Properties>
           <Events>
@@ -149,7 +149,7 @@
         <Container class="javax.swing.JPanel" name="linkPanel">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="f7" green="f8" red="ef" type="rgb"/>
+              <Color blue="fc" green="fc" red="fc" type="rgb"/>
             </Property>
             <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
               <Color id="Hand Cursor"/>
@@ -197,7 +197,7 @@
         <Container class="javax.swing.JPanel" name="instaPanel">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="f7" green="f8" red="ef" type="rgb"/>
+              <Color blue="fc" green="fc" red="fc" type="rgb"/>
             </Property>
             <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
               <Color id="Hand Cursor"/>
@@ -245,7 +245,7 @@
         <Container class="javax.swing.JPanel" name="epicPanel">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="f7" green="f8" red="ef" type="rgb"/>
+              <Color blue="fc" green="fc" red="fc" type="rgb"/>
             </Property>
             <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
               <Color id="Hand Cursor"/>
