Ultimos detalles caballeros

--- a/src/code/AndyInfo.form
+++ b/src/code/AndyInfo.form
@@ -61,9 +61,14 @@
       </Layout>
       <SubComponents>
         <Component class="javax.swing.JLabel" name="jLabel1">
+          <Properties>
+            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+              <Image iconType="3" name="/images/ANDY/DIMENSIONADA.jpg"/>
+            </Property>
+          </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="490" y="60" width="133" height="200"/>
+              <AbsoluteConstraints x="480" y="60" width="180" height="200"/>
             </Constraint>
           </Constraints>
         </Component>
